{
    "name": "InputSystem",
    "maps": [
        {
            "name": "BattleScene",
            "id": "2beba04c-4c0e-41ea-a3c9-4e4212e07efb",
            "actions": [
                {
                    "name": "RightInput",
                    "type": "Button",
                    "id": "62a761dd-0a53-4b31-aeab-49c50aaa6bd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftInput",
                    "type": "Button",
                    "id": "42bb96b8-e949-41e6-a3b1-e7e8585b9e5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpInput",
                    "type": "Button",
                    "id": "4cb591b6-5da1-4c75-b923-c02623bdf594",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownInput",
                    "type": "Button",
                    "id": "f168ef24-0915-40b7-b2b5-4814244f6232",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterInput",
                    "type": "Button",
                    "id": "dcf1de67-3160-4e83-883d-df0376f79089",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelInput",
                    "type": "Button",
                    "id": "95bdf880-7109-449f-8896-2e9caf210516",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "b5fbeb4d-0c61-430d-b858-af2417049330",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20b14c65-1962-4831-beff-f2486ea63c81",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23a14786-42a8-4a4a-b463-b9f04e7bc126",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b80bc4b1-4454-4690-ba7a-4a421a4321cc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "804b8c11-c87b-4a7b-bb8e-e77899d0678a",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42e4ece9-f5f3-445f-aded-70521bd8abfe",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2abd1552-ceb6-4d62-8c19-aa800aca97eb",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b82486b3-1521-43bd-b3c0-b0b33f4b0c50",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "DownInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8777b045-312e-4b12-99de-1018f563d6b9",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "DownInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c1dd59-4611-4d56-8537-2d3f8d3cfdfc",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EnterInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33f38e25-591f-4c58-91e2-54fe59e59276",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CancelInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbe9d4c8-a78f-4751-9ff3-3af5d9e39533",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "870f1cde-b8ac-4191-be06-1530664b241b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}